src/test/compile-fail/import-from-missing.rs
// error-pattern:unresolved
// xfail-test
import spam::{ham, eggs};

module spam {
    fn ham() { }
}

fn main() { ham(); eggs(); }
